_assets/css/custom/slides.scss
//Background Images

.cover-slide{
  background-image: url('../assets/cigi-campus-min.jpg');
}

.slide-5 {

}

.slide-6{}

.slide-7{}

.slide-8 {
  background-image: url('../assets/UNDRIP-min.jpg');
}

.slide-9 {
  background-image: url('../assets/north-of-60-min.jpg');
}

.slide-10{}

.slide-11{}

.slide-12 {
  background-image: url('../assets/wrc-min.jpg');
}

.slide-13{}

.slide-14 {
  background-image: url('../assets/blockchain-min.jpg');
}

.slide-15 {
  background-image: url('../assets/IMF-min.jpg');
}

.slide-16 {
  background-image: url('../assets/G20-min.jpg');
}


.fullscreen-bg {
  bottom: 0;
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  z-index: -100;
}

.fullscreen-bg-video {
  height: 100%;
  left: 0;
  object-fit: cover;
  position: absolute;
  top: 0;
  width: 100%;
}

.tabs {
  .tab, .download a{
    border: 1px solid rgba(0, 0, 0, 0.25);
    cursor: pointer;
    float: left;
    padding: 0 0.5rem;
    font-size: 0.875rem;
  }
  .tab:nth-child(1){
    border-right: none;
  }

  .tab.selected {
    border: solid 1px $accent-color;

  }
  .download a{
    margin-left: 0.625rem;
    display: block;
    background: $accent-color;
    border: 1px solid $accent-color;
    color: white;
    &:hover{
      background: lighten($accent-color, 25%);
      color: white;
    }
  }
}

header .tabs{
  margin-top: 0.25rem;
  .tab{
    text-transform: uppercase;
    font-size: 0.75rem;
  }
}

.tab-content {
  .tab {
    display: none;

    &.selected {
      display: block;
    }

    h1 {
      flex: 100%;
    }
  }
}

//Cover Slide

.cover-slide,
.standard-slide {
  background-position: center;
  background-size: cover;
  overflow: hidden;
  position: relative;

  .wrapper{
    position: relative;
  }

  h1 {
    font-size: 3rem;
    line-height: 3.35rem;
    padding: 0.5rem 0;
    font-weight: 400;
  }

  h3 {
    font-size: 1rem;
    padding-bottom: 0.5rem;
    text-transform: uppercase;
  }

  p {
    padding-bottom: 1rem;
  }

  a{
    color: $accent-color;
    text-decoration: none;

    &:hover{
      color: $accent-color-50;
    }
  }

  .fa{
    margin-right: 0.5rem;
  }

  .fa-play{
    border: solid 1px $accent-color;
    padding: 0.125rem;
    padding-left: 0.2rem;
    font-size: 0.55rem;
  }
}

.joint-message, .financials {
  h3 {
    display: none;
  }

  .col {
    column-count: 2;
    column-width: 450px;
  }
}

.cover-slide {
  h1 {
    text-align: center;
    color: $accent-color;
  }

  hr {
    align-self: center;
    border: 0;
    border-top: 1px solid rgba(0, 0, 0, 0.5);
    height: 0;
    padding-bottom: 1.5rem;
    width: 50%;
  }

}

.cover-slide::before,
.standard-slide::before {
  //background: linear-gradient(rgba(242, 240, 234, 0.15), rgba(242, 240, 234, 0.875));
  background: linear-gradient(to right, rgba(255, 255, 255, 0.85), rgba(255, 255, 255, 0.55));
  content: ' ';
  display: block;
  height: 100%;
  left: 0;
  opacity: 1;
  position: absolute;
  top: 0;
  width: 100%;
}

// Landing Page
.landing{
  .wrapper{
    position: relative;
  }

  .circle{
    position: absolute;
    top: 25%;
    left: 13%;
    width: 500px;
    height: 500px;
    border-radius: 50%;
    border: solid 1px rgb(210,211,205);

  }

  .arc {
    position: absolute;
    top: 23%;
    left: 11%;
    width: 540px;
    height: 540px;
    border: dashed 1px transparent;
    border-left-color: rgb(120,120,118);
    border-radius: 50%;
    transform: rotate(-55deg);
  }

  .content-wrapper{
    z-index: 100;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    position: absolute;
    width: 80%;
  }

  .content{
    column-count: 2;
    column-width: 300px;
  }

  h1{display: none;}

  .title{
    margin-left: 4rem;
    font-size: 9rem;
    line-height: 73%;
    font-weight: 800;
    color: rgba(120,120,118, 0.85);

    span{
      margin-left: -2rem;
    }
  }

  .nav{
    margin: 2rem;
    left: 47%;
    position: absolute;

    > div{
      float: left;
    }

    .link {
      float: left;
      border-top: solid 1px $grey-color;
      padding-top: 0.3rem;
      text-transform: uppercase;
      color: $accent-color;
      font-weight: 500;

      &:hover{
        color: $grey-color;
      }
    }
    .explore, .view-ar{
      position: relative;
    }
    .explore .link{
      border-right: solid 1px $grey-color;
      padding-right: 1rem;
    }

    .view-ar .link{
      padding-left: 1rem;
    }

    .up, .down{
      position: absolute;
    }
    .up{
      margin-right: 10px;
      margin-top: -3px;
      left: -2rem;
    }
    .down{
      margin-left: 10px;
      margin-top: 13px;
      right: -2rem;
    }

    .fa{
      display: block;
      font-size: 1.75rem;
      line-height: 1rem;
      margin-top: -7px;
      color: $accent-color;
    }

    .arrow-1{
      opacity: 1;
      transition: opacity .5s ease-in-out;
    }
    .arrow-2{
      opacity: 0;
    }
    .arrow-3{
      opacity: 0;
    }

    .explore, .view-ar{
      &:hover{
        .arrow-1{
          opacity: 0;
        }
        .arrow-2{
          animation: arrow-movement 1s ease-in-out;
        }
        .arrow-3{
          animation: arrow-movement 1.5s ease-in-out;
        }
      }
    }
    @keyframes arrow-movement {
      0%   {
        opacity: 0;
      }
      50% {
        opacity: 1;
      }
      100% {
        opacity: 0;
      }
    }

  }

  @include media-query($on-laptop) {
    .nav{
      position: relative;
      left: auto;
    }
    .arc {
      left: 8%;
    }

    .content-wrapper{
      width: 100%;
    }

    .title{
      margin-left: 2rem;
      margin-bottom: 1rem;
    }
  }
}

//Financials Slide
.financials{
  .notes{
    h4{
      color: $grey-color-dark;
      font-size: 1rem;
      font-weight: 400;
    }
    p{
      font-size: 0.6825rem;
      padding-bottom: 0.5rem;
    }
    
  }
  table{
    width: 100%;
    border-collapse: collapse; 
    border-spacing: 0;
    margin: 1rem 0;
    font-size: 0.875rem;
    border-bottom: double rgb(156,156,156);
    td:nth-child(1){
      width: 70%;
    }
    td:nth-child(2){
      width: 30%;
    }

    thead{
      .year{
        background: rgb(156,156,156);
        color: white;
      }
      .title{
        background: rgb(204,203,200);
        padding: 0.5rem 0;
        margin-bottom: 0.5rem;
      }
      td{
        text-align: center;
        font-size: 1.125rem;
        font-weight: 500;
        padding: 0.25rem 0.5rem;
        &:nth-child(1){
          border-right: solid 0.5rem $default-background-color;
        }
       
      }
    }
    tbody{
      border-top: solid 1rem transparent;
      td{
        &:nth-child(1){
          text-align: left;
          padding: 0.125rem 0 0.125rem 1rem;
        }
        &:nth-child(2){
          text-align: right;
          padding: 0.125rem 1rem 0.125rem 0;
        }
      }
      .section{
        td:nth-child(1){
          font-weight: 500;
          padding-left: 0;
        }
      }
      .total{
        td:nth-child(2){
          font-weight: 500;
        }
      }
      .double{
        border-bottom: double rgb(156,156,156);
      }
      .single{
        border-bottom: solid 1px rgb(156,156,156);
        border-top: solid 1px rgb(156,156,156);
      }
      .top{
        border-top: solid 1px rgb(156,156,156);
      }
    }
  }
}

